--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "webpack-basic",
-  "version": "1.0.0",
-  "description": "",
-  "__browserslist": "이 프로젝트가 지원하는 대상 브라우저를 지정 for Autoprefixer!",
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@vue/compiler-sfc": "^3.2.14",
-    "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^8.0.0",
-    "css-loader": "^5.1.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.18.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "postcss": "^8.2.8",
-    "postcss-loader": "^5.2.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "vue-loader": "^16.8.1",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.27.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.0.0-beta.0"
-  },
-  "dependencies": {
-    "@types/lodash-es": "^4.17.6",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
-    "lodash-es": "^4.17.21",
-    "vue": "^3.2.14",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
-  },
-  "eslintConfig": {
-    "globals": {
-      "kakao": false
+    "name": "webpack-basic",
+    "version": "1.0.0",
+    "description": "",
+    "__browserslist": "이 프로젝트가 지원하는 대상 브라우저를 지정 for Autoprefixer!",
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ],
+    "scripts": {
+        "dev": "webpack-dev-server --mode development",
+        "build": "webpack --mode production"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.13.10",
+        "@babel/plugin-transform-runtime": "^7.13.10",
+        "@babel/preset-env": "^7.13.10",
+        "@vue/compiler-sfc": "^3.2.14",
+        "autoprefixer": "^10.2.5",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.2",
+        "copy-webpack-plugin": "^8.0.0",
+        "css-loader": "^5.1.3",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-vue": "^7.18.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.1",
+        "postcss": "^8.2.8",
+        "postcss-loader": "^5.2.0",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0",
+        "vue-loader": "^16.8.1",
+        "vue-style-loader": "^4.1.3",
+        "webpack": "^5.27.1",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^4.0.0-beta.0"
+    },
+    "dependencies": {
+        "@types/lodash-es": "^4.17.6",
+        "axios": "^0.27.2",
+        "dayjs": "^1.11.3",
+        "lodash-es": "^4.17.21",
+        "vue": "^3.2.14",
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
+    },
+    "eslintConfig": {
+        "globals": {
+            "kakao": false
+        }
     }
-  }
 }
